# p3-model

./: .copilot-instructions.md  .gitignore  CMakeLists.txt  Doxyfile  README.md  STRUCT_IMPLEMENTATION.md  demo  fix-diagrams.sh  mermaid-diagram.md  model.cpp  model.h  modelasset.h  modelasset.h.new  modelchaptertag.h  modelcontribution.h  modelcontributor.h  modelcontributor.h.new  modelcontributorpresence.h  modelcontributorpresencetype.h  modelcontributorrole.h  modelenclosure.h  modelenclosuretype.h  modelenumerations.h  modelepisode.h  modelepisodetype.h  modelfabric.h  modellocationtag.h  modelpicture.h  modelpicturetype.h  modelpodcast.h  modelpodcast.h.new  modelpublisher.h  modelseason.h  modeltag.h  modeltag.h.new  modeltagreference.h  modeltagreferencetype.h  modeltranscripttag.h  p3-model.cpp  p3-model.h  (+4 more)
.github/: copilot-instructions.md
cmake/: p3-model-config.cmake.in
scripts/: add-etbb-font.sh  patch-etbb-font.sh
